# EmbeddedRobot

./: README.md
line_follow/: CMakeLists.txt  CMakeLists.txt~  package.xml
line_follow/src/: linefollower.cpp  linefollower.cpp~
line_follower_49/: package.xml~
line_follower_49/src/: linefollower_49.cpp
robotbase_49/: robotbase_49.ino
sketch_motor1/: linefollower.cpp~  sketch_motor1.ino  sketch_motor1.ino~
